[package]
name = "elapsed-time"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["time", "measure", "debug", "performance", "metrics"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]
repository = "https://github.com/nmeylan/elapsed-time"
readme = "README.md"
description = "This crate help you to measure time taken by a function or a block of code for print debugging purpose. It output in stdout (using println) the elapsed time."
include = ["**/*.rs", "Cargo.toml", "Cargo.lock", "README.md"]

[dependencies]
quote = "1.0"
syn = { version = "2", features = ["full"] }

tracing = {version = "0.1.41", optional = true}
log = {version = "0.4.26", optional = true}

[dev-dependencies]
tracing-subscriber = {version = "0.3.20"}
[lib]
proc-macro = true

[features]
tracing = ["dep:tracing"]
log = ["dep:log"]
